Add ordering field for book view
